--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,5 @@
 name: Android CI
 
-
 on:
   push:
     branches: [ "cci/cd" ]
@@ -11,15 +10,17 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-  steps:
-    - uses: actions/checkout@v3
-    - name: set up JDK 11
-    - uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distrinution: 'temurin'
-        cache: gradle
-    - name: Setup Gradle
-      uses: gradle/gradle-build-action@v2
-    - name: Build app
-      run: ./gradlew assemble
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+          cache: gradle
+
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+      - name: Build app
+        run: ./gradlew assemble
